# hydrogen-atom-simulation

./: .clang-tidy  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  install-gui.sh  install.sh  make-appimage.sh  patch_font.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
assets/: atom-sim.desktop
scripts/: install-macos.sh  install-windows.ps1
shaders/: raymarch.frag  screen_quad.vert
src/: async_compute.cpp  async_compute.h  atom_scene.cpp  atom_scene.h  crystal_lattice.cpp  crystal_lattice.h  element_data.cpp  element_data.h  energy_diagram.cpp  energy_diagram.h  main.cpp  molecular.cpp  molecular.h  screenshot.cpp  screenshot.h  shader.cpp  shader.h  text_renderer.cpp  text_renderer.h  time_evolution.cpp  time_evolution.h  volume_renderer.cpp  volume_renderer.h  wavefunction.cpp  wavefunction.h
tests/: CMakeLists.txt  test_element_data.cpp  test_wavefunction.cpp
